# agent-patterns

./: .env.example  README.md  agent.py  agent.ts  app.py  example.ts  example_usage.py  langgraph.json  main.py  main_backup.py  main_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  test_agent.py  test_imports.py  tsconfig.json
agent/: agent.py
config/: default.json  development.json  production.json
configurations/: complex_form.json  sample_form.json  sample_form.yaml
examples/: advanced_usage.py  basic_usage.py  interactive_example.py  simple_background_agent.py
form_agent/: agent.py  config.py  field.py
src/agent_patterns/: __init__.py  graph.py  orchestrator.py  remote_client.py  state.py  tools.py  utils.py
src/agents/: coordinator.py
src/state/: agent_state.py
two_stage_agent/: agent.py  agent.py.backup  example.py  langgraph.json
